--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "es6starter",
-  "version": "1.0.0",
+  "name": "react-transition-demo",
+  "version": "1.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/jest-cli/bin/jest.js",
     "build": "webpack",
     "server": "node index.js",
     "start": "npm run build && npm run server",
@@ -19,13 +19,24 @@
     "type": "git",
     "url": "http://github.com/ericandre615/react-transition-demo.git"
   },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-dom/",
+      "<rootDir>/node_modules/react/lib/ReactTestUtils/"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.7.6",
+    "babel-jest": "^12.1.0",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-jest": "^12.1.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint-plugin-react": "^5.0.1",
+    "jest-cli": "^12.1.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "postcss-loader": "^0.8.2",
